--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   <div id="header" style="background-color:#FFA500;">
     <h1 style="margin-bottom:0;text-align: center;">Made By BN Gurudath</h1></div>
      <% if @current_user %>
-         Logged in as <%= @current_user.email_id %>
+         Logged in as <%= @current_user.email %>
          <%= link_to "Log out", :controller=>"login",:action=>"logout"  %>
       <% else %>
       <% end %>
