--- a/app/views/layouts/_menu.html.erb
+++ b/app/views/layouts/_menu.html.erb
@@ -1,49 +1,108 @@
-<link type="text/css" rel="stylesheet" href="/stylesheets/js-css-menu.css" media="screen" />
-<ul class="js-css-menu shadow responsive">
-	<li class = "shadow_li"><%#=link_to("Home",:controller=>"pagenates",:action=>"index")%></li>
-	<li class="current shadow_li"><%=link_to("Article",:controller=>"base_articles",:action=>"index")%>
-		<div class="first_level">
-			<ul>
-				<li><b>Col 1</b></li>
-				<li><a href="#">Sublink 1</a></li>
-				<li><a href="#">Sublink 2</a></li>
-				<li><a href="#">Sublink 3</a></li>
-			</ul>
-			<ul>
-				<li><b>Col 2</b></li>
-				<li><a href="#">Sublink 1</a></li>
-				<li><a href="#">Sublink 2</a></li>
-				<li><a href="#">Sublink 3</a></li>
-			</ul>
-		</div>
-	</li>
-        <li class = "shadow_li"><%=link_to("Author",:controller=>"authors",:action=>"index")%></li>
- 	<li class = "shadow_li"><%=link_to("Image",:controller=>"image",:action=>"index")%></li>
-        <li  class = "shadow_li" id='search'>
-	 <%#=form_tag({:action=>"search"},{ :method => :get}) do %>
-	 <%#=hidden_field_tag :per_page,30%>
-	 <%#=text_field_tag :search,params[:search],{:class=>"search_box"}%>
-	 <%#=submit_tag("search",{:class=>'search_button'})%> 
-	 <%#end%>
-        </li>
-</ul>
-<style type="text/css">
-.js-css-menu {
-  width: 100%;
-}
-.shadow_li {
-width: 342px;
-text-align: center;
-border-color: black;
-}
-.shadow_li a {font-size: 25px;}
-.first_level{width: 47.6%;}
-.first_level ul li b{font-size: 23px;}
-.first_level ul li a {font-size: 20px;}
-.first_level ul {width: 328px;}
-.search_box {height: 47px;width: 276px;background-color: gold;font-size: 26px;}
-.search_button {width: 58px;
-height: 38px;
-background-color: royalblue;
-font-size: 15px;}
-</style>
+<link rel="stylesheet" rev="stylesheet" href="http://meyerweb.com/eric/tools/css/reset/reset.css" type="text/css" media="all">
+
+<link href="/stylesheets/menu_style.css"  rel="stylesheet" type="text/css" />
+<link href="/stylesheets/menu_demos.css"  rel="stylesheet" type="text/css" />
+<link href="/stylesheets/jquery.ferro.ferroMenu.css"  rel="stylesheet" type="text/css" />
+<link href="/stylesheets/font-awesome.css"  rel="stylesheet" type="text/css" />
+<link href='http://fonts.googleapis.com/css?family=Lato:300,400' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="/javascripts/jquery.min.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.ferro.ferroMenu-1.2.2.min.js"></script>
+<script type="text/javascript" src="/javascripts/jquery.transit.min.js"></script>
+        <script type="text/javascript">
+			var currentIndex = 0;
+			var currentId = "camera";
+			$(document).ready(function() {
+				$("#nav").ferroMenu({
+					position 	: "left-center",
+					delay 		: 50,
+					rotation 	: 720,
+					margin		: 20
+				});
+			});
+			
+			var colors = {
+					"camera" : {
+						"background" : "#D06503",
+						"index" : 0
+					},
+					"user" : {
+						"background" : "#E9931A",
+						"index" : 1
+					},
+					"mapmarker" : {
+						"background" : "#1691BE",
+						"index" : 2
+					},
+					"music" : {
+						"background" : "#166BA2",
+						"index" : 3
+					},
+					"commentalt" : {
+						"background" : "#1B3647",
+						"index" : 4
+					},
+					"moon" : {
+						"background" : "#152836",
+						"index" : 5
+					}
+					
+			};
+			
+			function goTo(id){
+				var obj = eval("colors."+id);
+				
+				$("body").css("background",obj.background);
+				$(".ferromenu-controller,#nav li a").css("color",obj.background);
+				if(obj.index > currentIndex){
+					$(".active").addClass("off");
+					$(".active").transition({
+						x : -100,
+						opacity : 0,
+						zIndex : 0
+					},600);
+					
+					$("#"+currentId).removeClass("active");
+					
+					$("#"+id).addClass("active");
+					$("#"+id).transition({
+						x : 400
+					},0,function(){
+						$("#"+id).removeClass("off");
+						$("#"+id).transition({
+							x : 0,
+							opacity : 1,
+							zIndex : 2
+						},600);
+					});
+				}else if(obj.index < currentIndex){
+					$(".active").addClass("off");
+					$(".active").transition({
+						x : 100,
+						opacity : 0,
+						zIndex : 0
+					},600);
+					$("#"+currentId).removeClass("active");
+					
+					
+					$("#"+id).addClass("active");
+					$("#"+id).transition({
+						x : -400
+					},0,function(){
+						$("#"+id).removeClass("off");
+						$("#"+id).transition({
+							x : 0,
+							opacity : 1,
+							zIndex : 2
+						},600);
+					});
+				}
+				currentIndex = obj.index;
+				currentId = id;
+				
+			}
+		</script>
+        <ul id="nav">
+			<li><a href="/"><i class="icon-camera">Home</i></a></li>
+			<li><a href="/base_articles"><i class="icon-user">Article</i></a></li>
+			<li><a href="/image"><i class="icon-map-marker">Image</i></a></li>
+		</ul>
